fix: more performance improvements
Same public apply() API is 4-9x faster; new compile-once API is up to 40x faster.